<resources>
    <string name="app_name">BakingApps</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_string">Empty View</string>
    <string name="list_of_step">List of Step :</string>
    <string name="step_s_detail">Step\'s Detail :</string>
    <string name="dummy_detail_step">5. Beat the cream cheese and 50 grams (1/4 cup) of sugar on medium speed in a stand mixer or high speed with a hand mixer for 3 minutes. Decrease the speed to medium-low and gradually add in the cold cream. Add in 2 teaspoons of vanilla and beat until stiff peaks form.</string>
    <string name="step_position">5/10</string>
    <string name="list_of_ingredient">List of Ingredient :</string>
    <string name="text_2">2</string>
    <string name="no_data_available">no data available</string>
    <string name="text_servings">servings :</string>
    <string name="text_brownis">Brownis</string>
    <string name="my_content">350 G Bittersweet chocolate (60-70% cacao) 226 G unsalted butter 300 G granulated sugar 100 G light brown sugar 5 UNIT large eggs 1 TBLSP vanilla extract 140 G all purpose flour 40 G cocoa powder 1.5 TSP salt 350 G semisweet chocolate chips</string>
</resources>
