<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ekosp.bakingapps.detail.StepListFragment">

    <TextView
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/list_of_ingredient"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_130dp"
        android:padding="@dimen/padding_10dp">

        <TextView
            android:id="@+id/ingredient_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </ScrollView>

    <TextView
        android:id="@+id/list_step"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:text="@string/list_of_step"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_step"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>