<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    android:orientation="vertical">



    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:padding="5dp"
            android:id="@+id/recipe_container"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <!-- <ImageView
                 android:background="@color/colorAccent"
                 android:id="@+id/imageViewKu"
                 android:layout_width="80dp"
                 android:layout_height="80dp" />-->


            <TextView
                android:id="@+id/name"
                tools:text="nama resep masakan"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/servings"
                tools:text="servings:8"
                android:gravity="bottom"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>